# claimdb

./: .gitattributes  .gitignore  README.md  core.html  core.html.md  index.html  main.py  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
claimdb/: _modidx.py  configuration.py  core.py  dbops.py  experiments.py  experiments_litellm.py  experiments_pydantic_ollama.py  filter_similarity.py  llm_as_judge.py  preprocess_bird.py  transformation.py  visualize.py  visualize_private.py
claimdb-benchmark/: test-private-h-claimdb.jsonl
experiments/public/: claude-3-5-haiku-20241022.jsonl  claude-3-haiku-20240307.jsonl  claude-haiku-4-5.jsonl  cogito:14b.jsonl  cogito:32b.jsonl  devstral-small-2:24b.jsonl  devstral:24b.jsonl  gemini-2.5-flash.jsonl  gemini-3-flash-preview.jsonl  gpt-4.1-nano.jsonl  gpt-4o-mini.jsonl  gpt-5-mini.jsonl  gpt-5-nano.jsonl  gpt-oss:20b.jsonl  llama3.1:8b.jsonl  llama3.2:1b.jsonl  llama3.2:3b.jsonl  llama3.3:70b.jsonl  magistral:24b.jsonl  ministral-3:14b.jsonl  ministral-3:3b.jsonl  ministral-3:8b.jsonl  mistral-nemo:12b.jsonl  mistral-small:22b.jsonl  nemotron-3-nano:30b.jsonl  qwen3-coder:30b.jsonl  qwen3:1.7b.jsonl  qwen3:14b.jsonl  qwen3:32b.jsonl  qwen3:4b.jsonl  qwen3:8b.jsonl  qwq:32b.jsonl
filter-data/: .gitattributes
filter-data/embeddings/: bird_example_embeddings.jsonl  bird_schema_embeddings.jsonl  counterfactual_claim_embeddings.jsonl  counterfactual_claim_similarity.jsonl  out_of_schema_claim_embeddings.jsonl  out_of_schema_claim_similarity.jsonl
filter-data/judges/: Phi-4.jsonl  grok-3-mini.jsonl  human_annotations.jsonl  mistral-small-2503.jsonl  panel_judges.jsonl
nbs/: 00_core.ipynb  01_configuration.ipynb  02_dbops.ipynb  03_preprocess_bird.ipynb  04_transformation.ipynb  05a_filter_judges.ipynb  05b_filter_similarity.ipynb  06_benchmark_creation.ipynb  07_experiments.ipynb  07a_experiments.ipynb  07b_expertiments.ipynb  08_visualize.ipynb  08a_visualize.ipynb  _index.ipynb  index.ipynb  nbdev.yml  sidebar.yml
